stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/Funding_Organization__c.field-meta.xml
<CustomField>
    <fullName>Funding_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Opportunities</relationshipLabel>
    <relationshipName>Funding_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>