stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/gps_Accepting_Applications__c.field-meta.xml
<CustomField>
    <fullName>gps_Accepting_Applications__c</fullName>
    <label>Accepting Applications</label>
    <type>Date</type>
</CustomField>