stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/gps_Application_Process__c.field-meta.xml
<CustomField>
    <fullName>gps_Application_Process__c</fullName>
    <label>Application Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>