stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/gps_Funding_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>gps_Funding_Eligibility__c</fullName>
    <label>Funding Eligibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>