stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/IDOAnnouncement_Date__c.field-meta.xml
<CustomField>
    <fullName>IDOAnnouncement_Date__c</fullName>
    <label>Announcement Date</label>
    <type>Date</type>
</CustomField>