stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/IDOApplication_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>IDOApplication_Due_Date__c</fullName>
    <label>Application Due Date</label>
    <type>Date</type>
</CustomField>