stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/IDOAward_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>IDOAward_Decision_Date__c</fullName>
    <label>Award Decision Date</label>
    <type>Date</type>
</CustomField>