stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/IDOCFDA_Number__c.field-meta.xml
<CustomField>
    <fullName>IDOCFDA_Number__c</fullName>
    <label>CFDA Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>