stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/IDOExpected_Number_of_Awards__c.field-meta.xml
<CustomField>
    <fullName>IDOExpected_Number_of_Awards__c</fullName>
    <label>Expected Number of Awards</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>