stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/IDOFunding_Opportunity_Manager__c.field-meta.xml
<CustomField>
    <fullName>IDOFunding_Opportunity_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Opportunity Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>