stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/IDOFunding_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>IDOFunding_Opportunity_Number__c</fullName>
    <displayFormat>gotf-{000000}</displayFormat>
    <label>Funding Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>