stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/IDOGrant_Type__c.field-meta.xml
<CustomField>
    <fullName>IDOGrant_Type__c</fullName>
    <label>Grant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formula</fullName>
            </value>
            <value>
                <fullName>Discretionary</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Directed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>