stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/IDONOFO_Submitted__c.field-meta.xml
<CustomField>
    <fullName>IDONOFO_Submitted__c</fullName>
    <label>NOFO Submitted</label>
    <type>Date</type>
</CustomField>