stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/IDOTotal_Program_Amount__c.field-meta.xml
<CustomField>
    <fullName>IDOTotal_Program_Amount__c</fullName>
    <label>Total Program Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>