stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/IDOTotal_Reserve_Amount__c.field-meta.xml
<CustomField>
    <fullName>IDOTotal_Reserve_Amount__c</fullName>
    <label>Total Reserve Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>