stDemoOne/force-app/main/default/objects/FundingOpportunity/fields/Public_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Public_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the Funding Opportunity is available to the public. If unchecked, the opportunity will only be visible to those users you choose to share it with.</inlineHelpText>
    <label>Public Opportunity</label>
    <type>Checkbox</type>
</CustomField>