stDemoOne/force-app/main/default/objects/FundingOpportunity/listViews/All_FundingOpportunities.listView-meta.xml
<ListView>
    <fullName>All_FundingOpportunities</fullName>
    <columns>Name</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>BudgetTemplate</columns>
    <columns>Program</columns>
    <columns>Status</columns>
    <columns>Public_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Funding Opportunities</label>
</ListView>